Remove nav2 in Forum; fix overflow

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,6 +1,3 @@
-/* body {
-   overflow: hidden;
-} */
 .App {
     overflow-x: hidden;
 }
